use bootstrap.css on public cdn

--- a/PaulChen/BrainSharkGadget/POC/brainshark.html
+++ b/PaulChen/BrainSharkGadget/POC/brainshark.html
@@ -8,7 +8,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.24.5/react-bootstrap.min.js"></script>
-    <link rel="stylesheet" href="//rawgit.com/SAP-Oxygen/sap-oxygen.github.io/master/PaulChen/BrainSharkGadget/jquery/common/bootstrap-3.2.0/bootstrap.css">
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//rawgit.com/SAP-Oxygen/sap-oxygen.github.io/master/PaulChen/BrainSharkGadget/POC/brainshark.css" />
   </head>
   <body style="text-align:middle">
